# Simple-Hasher

./: CMakeLists.txt  README.md  main.cpp
HashLibrary/: CMakeLists.txt
